add fixes